<resources>
	<string name="app_name">BookWorm</string>
	<string name="by"><b>By Charlie Collins</b>\n</string>
	<string name="aboutcontent">
        <i>Use BookWorm to keep track of books you have read, and you intend
            to read.
            Maintain a log of books that you can quickly view, sort, filter, and
            rate.</i>
        &lt;br /&gt;&lt;br /&gt;
        For more
        information, and to comment or report
        issues,
        please visit &lt;a
        href="http://code.google.com/p/and-bookworm/"&gt;the
        BookWorm project
        site&lt;/a&gt;.
        &lt;br /&gt;&lt;br /&gt;
        Thanks to Google Books and Open Library for making BookWorm possible.
    </string>
	<string name="menuScanTips">Scanning Tips</string>
	<string name="menuEdit">Edit</string>
	<string name="menuEditBook">Edit Book</string>
	<string name="menuAddBook">Add Book</string>
	<string name="menuDeleteBook">Delete Book</string>
	<string name="menuEditBookDetails">Edit Book Details</string>
	<string name="menuManageCoverImage">Manage Cover Image</string>
	<string name="menuSortBooks">Sort Books</string>
	<string name="menuAbout">About</string>
	<string name="menuPrefs">Prefs</string>
	<string name="btnYes">Yes</string>
	<string name="btnNo">No</string>
	<string name="btnCancel">Cancel</string>
	<string name="btnDismiss">Dismiss</string>
	<string name="btnDetails">Details</string>
	<string name="btnAddBook">Add book</string>
	<string name="btnSortBy">Sort by</string>
	<string name="btnScanCode">Scan product code</string>
    <string name="btnSearchWeb">Search the web</string>
    <string name="btnSearch">Search</string>
    <string name="btnUseForm">Use form</string>
    <string name="btnSave">Save</string>
    <string name="btnSelectImage">Select from gallery</string>
    <string name="btnRetrieveImage">Retrieve from web</string>
    <string name="btnGenerateImage">Generate from title</string>
    <string name="labelTitle">Title</string>
    <string name="labelSubtitle">Subtitle</string>
    <string name="labelSubject">Subject</string>
    <string name="labelIsbn10">ISBN 10</string>
    <string name="labelIsbn13">ISBN 13</string>
    <string name="labelAuthors">Author(s) (comma separated)</string>
    <string name="labelAuthorsShort">Author(s)</string>
    <string name="labelRating">Rating</string>
    <string name="labelDatepub">Publication date</string>
    <string name="labelPublisher">Publisher</string>
    <string name="labelReadstatus">Read status</string>
    <string name="labelAddBook">Add Book</string>
    <string name="labelCurrentCover">Current cover image</string>
    <string name="labelHaveRead">Have read?</string>
    <string name="labelSearch">Add book(s) by searching</string>
    <string name="labelMoreResults">-- Get more results --</string>
    <string name="labelEmailAddress">Email Address</string>
	<string name="msgInvalidISBN">ISBN format invalid (not ISBN 10 or ISBN 13), cannot retrieve result.</string>
	<string name="msgFindError">Book not found using ISBN/product code %s (may not be an ISBN?).</string>
	<string name="msgRetrievingBookData">Retrieving book data...</string>
	<string name="msgBookListEmpty">You don\'t have any books in your list yet. Use the action bar below to add books (by scanning, searching, or form entry).</string>
	<string name="msgScanError">Whoops, that entry didn\'t work. The product code/ISBN result was %s. Please try again, or use a different entry method. (If you are having trouble scanning a book, check out Menu->Scanning Tips.)</string>
	<string name="msgDataSourceError">Book data source not found, internal error, or networking issue.</string>
	<string name="msgISBNError">Book ISBN/product code not present.</string>
    <string name="msgScanningtips">*If the scanner works but recognizes a product rather than a book, try looking for a different bar code. Books often have multiple codes. The inside front cover may have another code that is different from the back. Especially for older paperback books, the inside cover code works more reliably.  &lt;br /&gt;&lt;br /&gt; *Make sure you are not scanning a sticker that has been placed over the bar code by a retailer. Many retailers do this, and the proprietary retailer codes will not scan. &lt;br /&gt;&lt;br /&gt; *Some books just do not scan. Product codes that cannot be interpreted as ISBNs will not work. In those cases try a web search for the title. It\'s still pretty quick, and it will likely work.</string>
    <string name="msgMinimumSave">Minimum of title and author(s) is required to save book (and book must be saved before managing cover image).</string>
    <string name="msgNoActivityGalleryError">No activity found to handle Gallery selection, cannot use this method.</string>
    <string name="msgBookUpdated">"Book updated</string>
    <string name="msgSavingBookInfo">Saving book info...</string>
    <string name="msgBookSaved">Book saved</string>
    <string name="msgBookSaveError">Error saving book, book information not present, or ID null.</string>
    <string name="msgRetrieveCoverImage">Retrieving cover image...</string>
    <string name="msgRetrieveCoverImageError">Error retrieving cover image, book information not present, or ID null.</string>
    <string name="msgGenerateCoverImage">Generating cover image...</string>
    <string name="msgGenerateCoverImageError">Error generating cover image, book information not present, or ID null.</string>
    <string name="msgSearching">Searching...</string>
    <string name="msgDeleteAllData">Are you sure (this will delete all data from database)?</string>
    <string name="msgExternalStorageNAError">External storage is not available at this time (may not be present, or may be mounted to a PC?).</string>
    <string name="msgDataDeleted">Data deleted</string>
    <string name="msgExportingData">Exporting data...</string>
    <string name="msgExportSuccess">Export successful!</string>
    <string name="msgExportError">Export failed</string>
    <string name="msgImportingData">Importing data...</string>
    <string name="msgImportSuccess">Import successful!</string>
    <string name="msgImportError">Import failed</string>
    <string name="msgImportFileMissingError">Database backup file does not exist, cannot import.</string>
    <string name="msgImportFileNonReadableError">Database backup file exists, but is not readable, cannot import.</string>
    <string name="msgSelectBookError">Unrecoverable error selecting book.</string>
    <string name="msgBookListStats">Book List Stats</string>
    <string name="msgResetAllCoverImages">Reset all cover images?</string>
    <string name="msgResetAllCoverImagesExplain">This will use the network to try to find and replace all cover images (can take a few minutes depending on number of books in database, and results may vary based on network state).</string>
    <string name="msgResetCoverImagesWarnTime">Resetting cover images, this could take a few minutes...</string>
    <string name="msgProcessingBookX">Processing book: %s.</string>
    <string name="msgWarnDupe">Warning, your list already contains a book with the same title and ISBN as this one.</string>
    <string name="msgTapToBegin">Tap to begin</string>
    <string name="prefSectApp">Application Preferences</string>
    <string name="prefTitleSplash">Enable splash screen?</string>
    <string name="prefSumSplash">By default Splash shown once after install, enable to show at each start.</string>
    <string name="prefTitleDebugLog">Enable debug logging?</string>
    <string name="prefSumDebugLog">Enable to get detailed logs.</string>
    <string name="prefSectDataProvider">Data Provider Preferences</string>
    <string name="prefTitleBookData">Book Data Provider</string>
    <string name="prefSumBookData">Currently only Google Books (future additions planned).</string>
    <string name="prefTitleCoverImage">Book Cover Image Provider</string>
    <string name="prefSumCoverImage">Currently only OpenLibrary (future additions planned).</string>
	<string name="menuStats">Stats</string>
	<string name="btnEmailCSV">Email CSV backup</string>
    <string name="btnEmailDB">Email DB backup</string>
	<string name="btnExportCSV">Export CSV to SD card</string>
    <string name="btnImportCSV">Import CSV from SD card</string>
    <string name="btnExportDB">Export DB to SD card</string>
    <string name="btnImportDB">Import DB from SD card</string>
	<string name="labelImportCSV">Import CSV File</string>
	<string name="msgImportCSVInstructions">Place a file named <i>bookworm.csv</i> in the <i>sdcard/bookwormdata</i> directory. Then press Parse when you are ready to proceed. See Menu->CSV Help for more information.</string>
	<string name="btnParse">Parse</string>
	<string name="btnImport">Import</string>
	<string name="btnDeleteData">Delete all data</string>
	<string name="labelManageData">Manage Data</string>
    <string name="msgScannerNotPresent">Barcode scanner may not be present, would like to check the Market and try to install it?</string>
    <string name="labelInstallScanner">Install Barcode Scanner</string>
    <string name="msgCsvMetaData">Parsed %s books from import file. Click import (below list) to continue and import to database.</string>
    <string name="msgCsvUnableToParse">Unable to parse any data from CSV file for import.</string>
    <string name="msgCsvFileNotFound">File <i>/sdcard/bookwormdata/bookworm.csv</i> not found, cannot import.</string>
    <string name="msgCsvSkippingBook">Skipping book (appears to be a duplicate):\n%s</string>
    <string name="msgCsvImportingBook">Importing book:\n%s</string>
    <string name="msgNetworkNAError">No network connection right now, cannot complete the requested action. Please try again once the network is available.</string>
    <string name="menuCsvHelp">CSV Help</string>
    <string name="msgCsvHelp">*BooKWorm requires a specific CSV import file and a specific CSV import format. The required file location is "/sdcard/bookwormdata/bookworm.csv". The required format is 12 fields (comma separated, fields with commas within them must be quoted or escaped): Title,Subtitle,Authors(pipe|separated),ISBN10,ISBN13,Description,Format,Subject,Publisher,Published Date,User Rating,User Read Status. &lt;br /&gt;&lt;br /&gt; *The CSV import process will skip the first line of the import file (this is usually the header), and any duplicate entries (books with the same title and ISBN, or title and authors if the ISBN is not present, as content in your database). &lt;br /&gt;&lt;br /&gt; *The easiest way to see an example of the format is to use the export as CSV feature. The export feature will place a CSV export file of your current database at the correct location (/sdcard/bookwormdata/bookworm.csv). &lt;br /&gt;&lt;br /&gt; *You can export XLS files as CSV, or rename TXT files to .csv, as long as they are in the correct format, and you place them in the correct location, BookWorm will import them.</string>
    <string name="btnResetCoverImages">Reset All Cover Images</string>
	<string name="labelTags">User Tags:</string>
	<string name="labelBlurb">User Blurb:</string>
	<string name="labelDescription">Description:</string>
	<string name="prefSectAdd">New Item Preferences</string>
    <string name="prefTitleDefaultAdd">Default add mode</string>
   	<string name="prefSumDefaultAdd">Select the default way to add books.</string>
    <string name="prefTitleFastScan">Enable quick scanning?</string>
    <string name="prefSumFastScan">Enable to scan books without prompts.</string>
    <string name="prefTitleDefaultTags">Default tags</string>
    <string name="prefSumDefaultTags">Select default tags to be linked to new books</string>
    <string name="prefTitleCameraButton">Use camera button?</string>
    <string name="prefSumCameraButton">Enable to use camera button to scan books.</string>
</resources>