<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/prefSectApp">
       <CheckBoxPreference 
        android:title="@string/prefTitleSplash" 
        android:summary="@string/prefSumSplash"
        android:key="showsplash" 
        android:defaultValue="false"/>        
        <CheckBoxPreference 
        android:title="@string/prefTitleDebugLog" 
        android:summary="@string/prefSumDebugLog"
        android:key="debugenabled" 
        android:defaultValue="false"/>

    </PreferenceCategory>

	<PreferenceCategory android:title="@string/prefSectAdd">
    	<ListPreference
          	android:title="@string/prefTitleDefaultAdd"
          	android:summary="@string/prefSumDefaultAdd"
          	android:key="addmodepref"
          	android:defaultValue="0"
          	android:entries="@array/addmodenames"
          	android:entryValues="@array/addmodekeys" />  
        <CheckBoxPreference 
        	android:title="@string/prefTitleCameraButton" 
        	android:summary="@string/prefSumCameraButton"
        	android:key="camerabuttonscanenabled" 
        	android:defaultValue="true"/>        
        <CheckBoxPreference 
        	android:title="@string/prefTitleFastScan" 
        	android:summary="@string/prefSumFastScan"
        	android:key="fastscanenabled" 
        	android:defaultValue="false"/>
        	
        <Preference android:key="prefdefaulttags" 
        	android:title="@string/prefTitleDefaultTags" 
        	android:summary="@string/prefSumDefaultTags"
        	android:persistent="false"/>    
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/prefSectDataProvider">
        <ListPreference
           android:title="@string/prefTitleBookData"
           android:summary="@string/prefSumBookData"
           android:key="dataproviderpref"
           android:defaultValue="com.totsp.bookworm.data.GoogleBookDataSource"
           android:entries="@array/bookdataprovidernames"
           android:entryValues="@array/bookdataproviderkeys" />   
         <ListPreference
           android:title="@string/prefTitleCoverImage"
           android:summary="@string/prefSumCoverImage"
           android:key="coverimageproviderpref"
           android:defaultValue="2"
           android:entries="@array/bookcoverimageprovidernames"
           android:entryValues="@array/bookcoverimageproviderkeys" />                
    </PreferenceCategory>

</PreferenceScreen>